--- a/MCS/MainWindow.xaml
+++ b/MCS/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="MCS.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="MainWindow" Height="350" Width="525">
+        Title="My Creative Studio" Width="800" Height="600" Icon="Images/Icon.ico">
     <Grid>
         
     </Grid>
