--- a/MCS/MainWindow.xaml
+++ b/MCS/MainWindow.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="My Creative Studio" Width="800" Height="600" Icon="Images/Icon.ico"
-        Loaded="Window_Loaded">
+        Loaded="Window_Loaded" Closing="Window_Closing">
     
     <Window.Resources>
         <Style x:Key="toolbarButtonImageStyle" TargetType="Image">
