--- a/MCS/MainWindow.xaml
+++ b/MCS/MainWindow.xaml
@@ -1,7 +1,7 @@
 ﻿<Window x:Class="MCS.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-        Title="My Creative Studio" Width="800" Height="600" Icon="Images/Icon.ico"
+        Title="My Creative Studio" Width="800" Height="600" Icon="/Images/Icon.ico"
         Loaded="Window_Loaded" Closing="Window_Closing">
     
     <Window.Resources>
