--- a/MCS/MainWindow.xaml
+++ b/MCS/MainWindow.xaml
@@ -33,7 +33,7 @@
                 </Button>
             </ToolBar>
             <ToolBar Band="1" BandIndex="2" IsManipulationEnabled="True">
-                <Button ToolTip="Log (F8)" Command="{Binding Path=Commands.LogCommand}">
+                <Button ToolTip="Log (F8)" Command="{Binding Path=Commands.LogWindowCommand}">
                     <Image Source="/Images/MainWindow/Log.png" Style="{StaticResource toolbarButtonImageStyle}"/>
                 </Button>
                 <Button ToolTip="Change Renderer (F9)">
@@ -55,7 +55,7 @@
                 </RadioButton>
             </ToolBar>
             <ToolBar Band="1" BandIndex="4" IsManipulationEnabled="True">
-                <Button ToolTip="Content Browser (F3)">
+                <Button ToolTip="Content Browser (F3)" Command="{Binding Path=Commands.ContentWindowCommand}">
                     <Image Source="/Images/MainWindow/Contents.png" Style="{StaticResource toolbarButtonImageStyle}"/>
                 </Button>
                 <Button ToolTip="Environment (Ctrl+E)">
