--- a/MCS/MainWindows/ContentWindow.xaml
+++ b/MCS/MainWindows/ContentWindow.xaml
@@ -4,12 +4,15 @@
         Title="Content Borwser" Width="640" Height="480" Icon="/Images/MainWindow/Contents.PNG">
     <Grid>
         <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="150"/>
+            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition Width="*"/>
             <ColumnDefinition Width="Auto"/>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
 
         <!-- Path Tree -->
-        <TreeView Width="170" ItemsSource="{Binding Path=PathsTree}" Grid.Column="0" IsTextSearchEnabled="True">
+        <TreeView ItemsSource="{Binding Path=PathsTree}" Grid.Column="0" IsTextSearchEnabled="True">
 
             <TreeView.ContextMenu>
                 <ContextMenu>
@@ -19,12 +22,6 @@
                     <MenuItem Header="Delete"/>
                 </ContextMenu>
             </TreeView.ContextMenu>
-
-            <TreeView.ItemContainerStyle>
-                <Style TargetType="TreeViewItem">
-                    <Setter Property="IsExpanded" Value="True"/>
-                </Style>
-            </TreeView.ItemContainerStyle>
 
             <TreeView.ItemTemplate>
                 <HierarchicalDataTemplate ItemsSource="{Binding Path=Value.Children}">
@@ -37,16 +34,36 @@
 
         </TreeView>
 
-        <!-- Right Grid -->
-        <Grid Grid.Column="1">
+        <GridSplitter Grid.Column="1" 
+              HorizontalAlignment="Center" 
+              VerticalAlignment="Stretch"
+              ShowsPreview="true"
+              Width="2"/>
 
+        <!-- Content Grid -->
+        <Grid Grid.Column="2">
             <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
                 <RowDefinition Height="*"/>
-                <RowDefinition Height="auto" />
             </Grid.RowDefinitions>
-
+            
+            <!-- Search Panel -->
+            <Grid Grid.Row="0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="Auto"/>
+                </Grid.ColumnDefinitions>
+                
+                <Image Grid.Column="0" Source="/Images/ContentWindow/Search.png" Width="20" Margin="1"/>
+                <TextBox Grid.Column="1" Margin="1"/>
+                <Button Grid.Column="2" Margin="3 1">
+                    <Image Source="/Images/ContentWindow/Clear.png" Width="15"/>
+                </Button>
+            </Grid>
+            
             <!-- Content List -->
-            <ListBox Grid.Row="0" ScrollViewer.HorizontalScrollBarVisibility="Disabled"
+            <ListBox Grid.Row="1" ScrollViewer.HorizontalScrollBarVisibility="Disabled"
                      ItemsSource="{Binding Path=Content}" SelectionMode="Extended" AllowDrop="True">
 
                 <ListBox.ContextMenu>
@@ -86,34 +103,15 @@
                 </ListBox.ItemTemplate>
 
             </ListBox>
-
-            <!-- Right Bottom Grid -->
-            <Grid Grid.Row="1">
-
-                <Button Content="All Content" Width="70" Height="20" HorizontalAlignment="Left" 
-                        Margin="6,6,0,0" VerticalAlignment="Top" ToolTip="Show all content (Ctrl+A)"/>
-                <Label Content="Search:" Width="50" Height="25" Margin="99,4,0,0" VerticalAlignment="Top" HorizontalAlignment="Left" />
-                <TextBox Height="25" Margin="155,6,6,0" VerticalAlignment="Top" ToolTip="Search (Ctrl+F)"
-                         Text="{Binding Path=TextFilter, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
-
-                <ListBox MinWidth="435" MinHeight="20" Margin="6,35,0,6" HorizontalAlignment="Left" 
-                         ItemsSource="{Binding Path=TypeFilter}">
-
-                    <ListBox.ItemsPanel>
-                        <ItemsPanelTemplate>
-                            <StackPanel Orientation="Horizontal"/>
-                        </ItemsPanelTemplate>
-                    </ListBox.ItemsPanel>
-
-                    <ListBox.ItemTemplate>
-                        <DataTemplate>
-                            <CheckBox Content="{Binding Path=Value.Type}" IsChecked="{Binding Path=Value.IsSelected}" Margin="5"/>
-                        </DataTemplate>
-                    </ListBox.ItemTemplate>
-
-                </ListBox>
-
-            </Grid>
         </Grid>
+
+        <GridSplitter Grid.Column="3" 
+              HorizontalAlignment="Center" 
+              VerticalAlignment="Stretch"
+              ShowsPreview="true"
+              Width="2"/>
+        
+        <!-- Viewer and Properties -->
+        
     </Grid>
 </Window>
