--- a/MCS/MainWindows/ContentWindow.xaml
+++ b/MCS/MainWindows/ContentWindow.xaml
@@ -12,11 +12,11 @@
         </Grid.ColumnDefinitions>
 
         <!-- Path Tree -->
-        <TreeView ItemsSource="{Binding Path=PathsTree}" Grid.Column="0" IsTextSearchEnabled="True">
+        <TreeView ItemsSource="{Binding Path=PathsTree}" Grid.Column="0" IsTextSearchEnabled="True" SelectedItemChanged="TreeView_SelectedItemChanged">
 
             <TreeView.ContextMenu>
                 <ContextMenu>
-                    <MenuItem Header="Create Package"/>
+                    <MenuItem Header="Create Package" Command="{Binding Path=CreatePackageCommand}"/>
                     <MenuItem Header="Create Folder"/>
                     <MenuItem Header="Rename"/>
                     <MenuItem Header="Delete"/>
@@ -25,7 +25,7 @@
 
             <TreeView.ItemTemplate>
                 <HierarchicalDataTemplate ItemsSource="{Binding Path=Value.Children}">
-                    <StackPanel Orientation="Horizontal">
+                    <StackPanel Orientation="Horizontal" ToolTip="{Binding Path=Value.FullPath}">
                         <Image Source="{Binding Path=Value.Image}" Width="16" Height="16" Stretch="Fill"/>
                         <Label Content="{Binding Path=Key}"/>
                     </StackPanel>
@@ -57,7 +57,7 @@
                 
                 <Image Grid.Column="0" Source="/Images/ContentWindow/Search.png" Width="20" Margin="1"/>
                 <TextBox Grid.Column="1" Margin="1" Text="{Binding Path=Filter, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"/>
-                <Button Grid.Column="2" Margin="3 1">
+                <Button Grid.Column="2" Margin="3 1" Command="{Binding Path=ClearFilterCommand}">
                     <Image Source="/Images/ContentWindow/Clear.png" Width="15"/>
                 </Button>
             </Grid>
