--- a/MCS/Dialogs/TextDialogBox.xaml
+++ b/MCS/Dialogs/TextDialogBox.xaml
@@ -2,7 +2,8 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="TextDialogBox" Width="Auto" Height="Auto" SizeToContent="WidthAndHeight" 
-        ResizeMode="NoResize" ShowInTaskbar="False" Topmost="True" WindowStyle="ToolWindow">
+        ResizeMode="NoResize" ShowInTaskbar="False" Topmost="True" WindowStyle="ToolWindow" 
+        KeyDown="TextBox_KeyDown">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition/>
@@ -16,7 +17,7 @@
             </Grid.ColumnDefinitions>
             
             <Label Content="{Binding Path=Label}" Grid.Column="0" Margin="5"/>
-            <TextBox Text="{Binding Path=Text}" Grid.Column="1" Margin="5" MinWidth="75" KeyDown="nameTextBox_KeyDown"/>
+            <TextBox Text="{Binding Path=Text}" Grid.Column="1" Margin="5" MinWidth="75"/>
         </Grid>
 
         <Grid Grid.Row="1">
