Allow files drop in ContentWindow.

--- a/MCS/MainWindows/ContentWindow.xaml
+++ b/MCS/MainWindows/ContentWindow.xaml
@@ -64,7 +64,7 @@
             
             <!-- Content List -->
             <ListView Grid.Row="1" ScrollViewer.VerticalScrollBarVisibility="Disabled" SelectionMode="Extended" AllowDrop="True"
-                     ItemsSource="{Binding Path=Contents}" SelectionChanged="ListView_SelectionChanged">
+                     ItemsSource="{Binding Path=Contents}" SelectionChanged="ListView_SelectionChanged" Drop="ListView_Drop">
 
                 <ListView.ContextMenu>
                     <ContextMenu>
