--- a/MCS/Dialogs/TextDialogBox.xaml
+++ b/MCS/Dialogs/TextDialogBox.xaml
@@ -2,7 +2,7 @@
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         Title="TextDialogBox" Width="Auto" Height="Auto" SizeToContent="WidthAndHeight" 
-        ResizeMode="NoResize" ShowInTaskbar="False" Topmost="True" WindowStyle="ToolWindow" 
+        ResizeMode="NoResize" ShowInTaskbar="False" Topmost="True" 
         KeyDown="TextBox_KeyDown">
     <Grid>
         <Grid.RowDefinitions>
