--- a/MCS/MainWindow.xaml
+++ b/MCS/MainWindow.xaml
@@ -1,6 +1,7 @@
 ﻿<Window x:Class="MCS.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:mc="clr-namespace:MCS.Controls"
         Title="My Creative Studio" Width="800" Height="600" Icon="/Images/Icon.ico"
         Loaded="Window_Loaded" Closing="Window_Closing">
     
@@ -16,11 +17,15 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="*" />
-            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition/>
+            <ColumnDefinition Width="Auto"/>
+            <ColumnDefinition Width="Auto" MinWidth="250"/>
+        </Grid.ColumnDefinitions>
 
         <!-- Top ToolBar -->
-        <ToolBarTray VerticalAlignment="Top" Grid.Row="0" IsManipulationEnabled="True">
+        <ToolBarTray VerticalAlignment="Top" Grid.Row="0" Grid.ColumnSpan="3" IsManipulationEnabled="True">
             <ToolBar Band="1" BandIndex="1" IsManipulationEnabled="True">
                 <Button ToolTip="New (Ctrl+N)" Command="{Binding Path=NewSceneCommand}">
                     <Image Source="/Images/MainWindow/New.png" Style="{StaticResource toolbarButtonImageStyle}"/>
@@ -91,7 +96,7 @@
         </ToolBarTray>
 
         <!-- Render image -->
-        <WindowsFormsHost Name="render" Grid.Row="1" Focusable="True">
+        <WindowsFormsHost Name="render" Grid.Row="1" Grid.RowSpan="2" Grid.Column="0" Focusable="True">
 
             <WindowsFormsHost.ContextMenu>
                 <ContextMenu>
@@ -111,45 +116,65 @@
 
         </WindowsFormsHost>
 
-        <!-- Bottom StatusBar -->
-        <StatusBar Grid.Row="2" Height="30" VerticalAlignment="Top">
-            <ComboBox Width="250" MaxDropDownHeight="100">
-                <ComboBox.ItemTemplate>
-                    <DataTemplate>
-                        <ContentPresenter Content="{Binding Name}"/>
-                    </DataTemplate>
-                </ComboBox.ItemTemplate>
-            </ComboBox>
-            <Separator/>
-            <!-- <MC:ValueBox x:Name="scaleValueBox" Width="50" Value="0.0" Changed="scaleValueBox_Changed"/> -->
-            <Separator/>
-            <Image Source="/Images/MainWindow/translate.png"/>
-            <ComboBox Width="Auto" SelectedIndex="1">
-                <ComboBoxItem Content="1"/>
-                <ComboBoxItem Content="4"/>
-                <ComboBoxItem Content="16"/>
-                <ComboBoxItem Content="64"/>
-                <ComboBoxItem Content="256"/>
-                <ComboBoxItem Content="1024"/>
-            </ComboBox>
-            <Separator/>
-            <Image Source="/Images/MainWindow/rotate.png"/>
-            <ComboBox Width="Auto" SelectedIndex="1">
-                <ComboBoxItem Content="5"/>
-                <ComboBoxItem Content="15"/>
-                <ComboBoxItem Content="45"/>
-                <ComboBoxItem Content="90"/>
-            </ComboBox>
-            <Separator/>
-            <Image Source="/Images/MainWindow/scale.png"/>
-            <ComboBox Width="Auto" SelectedIndex="2">
-                <ComboBoxItem Content="1"/>
-                <ComboBoxItem Content="10"/>
-                <ComboBoxItem Content="30"/>
-                <ComboBoxItem Content="50"/>
-            </ComboBox>
-            <Separator/>
-            <Label Width="Auto"/>
-        </StatusBar>
+        <GridSplitter Grid.Row="1" Grid.Column="1" 
+              HorizontalAlignment="Center" 
+              VerticalAlignment="Stretch"
+              ShowsPreview="true"
+              Width="2"/>
+
+        <!-- Right Panel -->
+        <Grid Grid.Row="1" Grid.Column="2">
+            <Grid.RowDefinitions>
+                <RowDefinition/>
+                <RowDefinition Height="Auto"/>
+            </Grid.RowDefinitions>
+            
+            <Grid Grid.Row="0">
+                <mc:PropertyGrid Expanded="True" Object="{Binding Path=SelectedElement}" GetList="{Binding Path=GetSelectedContentElementsList}"/>
+            </Grid>
+
+            <!-- Bottom StatusBar -->
+            <StatusBar Grid.Row="1" Height="30" VerticalAlignment="Top">
+                <!--
+                <ComboBox Width="250" MaxDropDownHeight="100">
+                    <ComboBox.ItemTemplate>
+                        <DataTemplate>
+                            <ContentPresenter Content="{Binding Name}"/>
+                        </DataTemplate>
+                    </ComboBox.ItemTemplate>
+                </ComboBox>-->
+                <Separator/>
+                <!-- <MC:ValueBox x:Name="scaleValueBox" Width="50" Value="0.0" Changed="scaleValueBox_Changed"/> -->
+                <Separator/>
+                <Image Source="/Images/MainWindow/translate.png"/>
+                <ComboBox Width="Auto" SelectedIndex="1">
+                    <ComboBoxItem Content="1"/>
+                    <ComboBoxItem Content="4"/>
+                    <ComboBoxItem Content="16"/>
+                    <ComboBoxItem Content="64"/>
+                    <ComboBoxItem Content="256"/>
+                    <ComboBoxItem Content="1024"/>
+                </ComboBox>
+                <Separator/>
+                <Image Source="/Images/MainWindow/rotate.png"/>
+                <ComboBox Width="Auto" SelectedIndex="1">
+                    <ComboBoxItem Content="5"/>
+                    <ComboBoxItem Content="15"/>
+                    <ComboBoxItem Content="45"/>
+                    <ComboBoxItem Content="90"/>
+                </ComboBox>
+                <Separator/>
+                <Image Source="/Images/MainWindow/scale.png"/>
+                <ComboBox Width="Auto" SelectedIndex="2">
+                    <ComboBoxItem Content="1"/>
+                    <ComboBoxItem Content="10"/>
+                    <ComboBoxItem Content="30"/>
+                    <ComboBoxItem Content="50"/>
+                </ComboBox>
+                <Separator/>
+                <Label Width="Auto"/>
+            </StatusBar>
+        </Grid>
+        
     </Grid>
 </Window>
