--- a/MCS/MainWindows/ContentWindow.xaml
+++ b/MCS/MainWindows/ContentWindow.xaml
@@ -1,6 +1,7 @@
 ﻿<Window x:Class="MCS.MainWindows.ContentWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+        xmlns:mc="clr-namespace:MCS.Controls"
         Title="Content Borwser" Width="640" Height="480" Icon="/Images/MainWindow/Contents.PNG">
     <Grid>
         <Grid.ColumnDefinitions>
@@ -114,6 +115,21 @@
               Width="2"/>
         
         <!-- Viewer and Properties -->
-        
+        <Grid Grid.Column="4">
+            <Grid.RowDefinitions>
+                <RowDefinition/>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+
+            <mc:PropertyGrid Grid.Row="0" Object="{Binding Path=SelectedElement}"/>
+
+            <GridSplitter Grid.Row="1" 
+              HorizontalAlignment="Stretch" 
+              VerticalAlignment="Center"
+              ShowsPreview="true"
+              Height="2"/>
+            
+        </Grid>
     </Grid>
 </Window>
